# quest-api

./: .gitignore  Cargo.toml  Makefile  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: check_history.sh  check_history.yaml
docker/web/: Dockerfile
migrations/: 20221118162750_init.sql  20221212162339_user.sql  20230227072204_sessions.sql  20230310050019_challenges.sql  20230606163638_challenge_position.sql  20230722094440_user_challenge.sql  20230729070234_table_rename.sql  20230806081150_challenge_image.sql  20230812054910_remove_quest_attributes.sql
seeds/: seed.sql
src/: handlers.rs  main.rs  repositories.rs  requests.rs
src/handlers/: challenge.rs  quest.rs  user.rs  user_challenge.rs  user_quest.rs
src/infras/: dynamodb.rs  s3.rs
src/middleware/: auth.rs
src/repositories/: challenge.rs  quest.rs  user.rs  user_challenge.rs  user_quest.rs
src/services/: user.rs
terraform/local/: main.tf
terraform/modules/: dynamodb.tf  s3.tf
