[package]
name = "quest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-session = "3.0.0"
async-sqlx-session = { version = "0.4.0", default-features = false, features = ["pg", "async_std", "rustls"] }
axum = { version = "0.5.17", features = ["headers"] }
bcrypt = "0.14"
dotenv = "0.15.0"
http = "0.2.8"
hyper = "0.14.23"
mime = "0.3.16"
nanoid = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
